--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   dio: ^3.0.10
   cached_network_image: ^2.0.0
   location: ^3.0.2
+  percent_indicator: ^2.1.8
+  expandable: ^4.1.3
+  smart_select: ^4.3.2
+  logger: ^0.9.4
 
 flutter_icons:
   android: true
